--- a/ldapadmin/src/main/webapp/console/app/assets/lang/en.json
+++ b/ldapadmin/src/main/webapp/console/app/assets/lang/en.json
@@ -1,30 +1,32 @@
 {
 
-   "tab.infos"       : "Infos",
-   "tab.groups"      : "Groups",
-   "tab.analytics"   : "Analytics",
-   "tab.messages"    : "Messages",
-   "tab.logs"        : "Logs",
-   "tab.manage"      : "Manage",
+  "tab.infos"       : "Infos",
+  "tab.groups"      : "Groups",
+  "tab.analytics"   : "Analytics",
+  "tab.messages"    : "Messages",
+  "tab.logs"        : "Logs",
+  "tab.manage"      : "Manage",
 
-   "user.updated"    : "User updated",
-   "user.error"      : "Error while saving user",
+  "user.updated"    : "User updated",
+  "user.error"      : "Error while saving user",
+  "user.save"       : "Save",
+  "user.delete"     : "Delete user",
 
-   "group.system"    : "System groups",
-   "group.app"       : "Application groups",
+  "group.system"    : "System groups",
+  "group.app"       : "Application groups",
 
-   "msg.compose"     : "Compose message",
-   "msg.date"        : "Date",
-   "msg.subject"     : "Subject",
-   "msg.sender"      : "Sender",
-   "msg.messages"    : "Messages",
-   "msg.on"          : "on",
-   "msg.attachments" : "Attachments",
-   "msg.templates"   : "Choose template",
-   "msg.title"       : "Title",
-   "msg.content"     : "Content",
-   "msg.cancel"      : "Cancel",
-   "msg.send"        : "Send",
-   "msg.sent"        : "Message sent!",
-   "msg.error"       : "Error sending message"
+  "msg.compose"     : "Compose message",
+  "msg.date"        : "Date",
+  "msg.subject"     : "Subject",
+  "msg.sender"      : "Sender",
+  "msg.messages"    : "Messages",
+  "msg.on"          : "on",
+  "msg.attachments" : "Attachments",
+  "msg.templates"   : "Choose template",
+  "msg.title"       : "Title",
+  "msg.content"     : "Content",
+  "msg.cancel"      : "Cancel",
+  "msg.send"        : "Send",
+  "msg.sent"        : "Message sent!",
+  "msg.error"       : "Error sending message"
 }
